# menu-ribs-web-flet

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/: build-apk.yml
.github/workflows/: main.yml
api_request/: peticiones.py
components/: barra_inferior.py  boton.py  categorias.py  galeria.py  galeria_sin_botones.py  modal_extras.py
docs/: .last_build_id
otros/: ejemplo.py  pyproject.toml  web_view.py
page/: bebidas.py  burger.py  cafes.py  carrito.py  cocteles.py  entradas.py  extras.py  licores.py  platos.py  postres.py  promociones.py
src/: main.py
src/components/: barra_inferior.py  barra_superior.py  boton.py  categorias.py  galeria.py  galeria_sin_botones.py  modal_extras.py  notificaciones.py  peticiones.py
src/globales/: variables_globales.py
src/otros/: ejemplo.py
src/page/: __init__.py  bebidas.py  burger.py  cafes.py  carrito.py  cocteles.py  entradas.py  extras.py  home.py  kids.py  licores.py  platos.py  postres.py  promociones.py
web/: .last_build_id  flutter_bootstrap.js  flutter_service_worker.js  index.html  version.json
web/assets/: NOTICES
web/assets/app/: app.zip.hash
